# DST

./: README.md  config.json  pyproject.toml
data/ontology/: mission.owx
data/scenarios/scenario_01/: events.json  mission.json
data/scenarios/scenario_01/countermeasures/: catalog.json
data/scenarios/scenario_02/: events.json  mission.json
data/scenarios/scenario_02/countermeasures/: catalog.json
src/tfg/: config.py  main.py  pipeline.py
src/tfg/catalog/: __init__.py  loader.py
src/tfg/evaluator/: __init__.py  evaluator.py
src/tfg/graph/: __init__.py  builder.py
src/tfg/models/: __init__.py  models.py
src/tfg/ontology/: __init__.py  loader.py
src/tfg/recommendator/: __init__.py  engine.py  topsis.py
src/tfg/report/: __init__.py  generator.py
src/tfg/report/template/: report.html.j2
src/tfg/scenario/: __init__.py  events.py  loader.py
