[project]
name = "tfg"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "owlready2>=0.46",
    "networkx>=3.2",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "matplotlib>=3.8"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
